[project]
name = "pyosintcobralib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "fake-useragent>=2.2.0",
    "geopy>=2.4.1",
    "getmac>=0.9.5",
    "idna>=3.11",
    "jeepney>=0.9.0",
    "mdurl>=0.1.2",
    "netifaces>=0.11.0",
    "ping3>=5.1.5",
    "pkginfo>=1.12.1.2",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "rfc3986>=2.0.0",
    "rich>=14.2.0",
    "ruff>=0.14.7",
    "scapy>=2.6.1",
    "vt-py>=0.22.0",
]

[project.scripts]
pyosintcobralib = "pyosintcobralib:main"
netcobra = "pyosintcobralib:netcobra.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

